objectService fix